traces/bug_230.txt
src/fflib/problem.cpp:206: error: DEAD_STORE
  The value written to &pa (type std::complex<double>*) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:206:5: Write of unused value
204.       long npi;
205.       R *a=mat.a;
206.       R *pa=a;
           ^
207.       long i,j;
208.       long n= mat.n,m=mat.m,nx=n*m;
